# zero-mono

./: .eslintrc.js  .gitmodules  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/ISSUE_TEMPLATE/: GENERAL.yml  config.yml  general-bug.yml
.github/workflows/: publish-images-for-apps.yml  publish-landing-page.yml  publish-package-to-npmjs.yml  s3n-web.yml  sdk-to-npmjs.yml  the-forge-portal.yml  zero-labs.yml
apps/app/: app.vue  components.json  nuxt.config.ts  package-lock.json  package.json
apps/attestation/: README.md  package-lock.json  package.json
apps/contracts/: .gitignore  hardhat.config.ts  package.json  structure.excalidraw
apps/docs/: mint.json
apps/labs/: components.json  package.json
apps/landing/: Dockerfile  app.vue  drizzle.config.ts  fly.toml  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/passport/: app.vue  nuxt.config.ts  package.json  tailwind.config.ts
apps/protocol/services/verifier/: .gitignore  Cargo.toml
apps/protocol/services/verifier/src/: main.rs
apps/sdk/: README.md  package.json
apps/verify/: package.json
apps/wallet/: dist.crx  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
apps/zk-infra/: nitro.config.ts  package.json
apps/zkSchema/: package.json
assets/css/: glitch.css
assets/scss/: main.scss
d/: package.json
ddv/: pnpm-lock.yaml
diagrams/: ecosystem.txt  protocol-layers.excalidraw  roadmap.txt
notes/: ecosystem.txt  roadmap.txt
sketches/: structure.excalidraw
(+337 files in other folders)
