[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.9.2" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
hex = "0.4"
dialoguer = "0.11.0"
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
rpassword = "7.3.1"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
web3 = "0.18"
actix-web-test = "0.0.1"
base64 = "0.22.1"
mockall = "0.13.0"
